use two lemur cgi interfaces for parsed terms and cached pages

--- a/judgementapp/templates/judgementapp/document.html
+++ b/judgementapp/templates/judgementapp/document.html
@@ -42,7 +42,7 @@
       {% endif %}
       </div>
 
-      <div class="col-md-6"><h4 style="text-align: center;">Document "{{ document.docId }}" ({{ rank }} / {{total_rank}}) <a href="{{ cached }}"><h6>[Cached version]</h6></a></h4></div>
+      <div class="col-md-6"><h4 style="text-align: center;">Document "{{ document.docId }}" ({{ rank }} / {{total_rank}}) <a href="{{ cached }}" target="_blank"><h6>[Cached version]</h6></a></h4></div>
 
       <div class="col-md3" align="right">
       {% if next %}
